# project-saphi-tracks

./: .gitignore  Cargo.toml  README.md  api.Dockerfile  dev.docker-compose.yml  diesel.toml  docker-compose.yml  pyproject.toml  randomize_jwt_secret.sh  requirements.txt  web.Dockerfile
api/: .gitignore  __init__.py  config.py  container.py  jwt.py
api/auth/: authenticator.py  passwordmanager.py  sessionmanager.py
api/database/: associations.py  cli.py  databasemanager.py  entitymanager.py
api/di/: transientcontainer.py
api/discord/: discord.py  discordclient.py  discordguildwidget.py
api/event/: event.py  eventmanager.py  eventmanagerfactory.py  eventresult.py  eventsubscriber.py
api/faker/: cli.py  fakerservice.py
api/http/: controller.py  dispatcher.py  requesthelper.py  response.py  router.py  routerfactory.py
api/lib/: container.py  customtrackmanager.py  pagination.py  saphiclient.py
api/resource/: resourcemanager.py
api/tests/: fixtures.py  mockfilesystemadapter.py  mockmodelrepository.py  mockpasswordencoderstrategy.py
api/ui/: displayoptionsgenerator.py
api/util/: filesystemhelper.py  semvervalidator.py
doc/: deployment.md  dev.md  extensions.md  index.md
migration/src/: lib.rs  m20250209_210554_create_users_table.rs  m20250209_210639_create_custom_tracks_table.rs  m20250209_210650_create_resources_table.rs  m20250209_210657_create_permissions_table.rs  m20250209_210701_create_settings_table.rs  m20250209_210707_create_tags_table.rs  (+3 more)
src/: app.rs  lib.rs  main.rs  schema.rs
web/: index.html  package-lock.json  package.json
(+272 files in other folders)
