[package]
name = "saphi_custom_tracks"
version = "1.0.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio", "macros" ] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
md-5 = "0.10.6"
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
rand = "0.9.0"
clap = { version = "4.5.29", features = ["derive"] }
