[project]
name = "saphi-custom-tracks"
version = '1.0.0'
description = "Custom Track Repository for Project Saphi"
dependencies = [
    "flask",
    "flask-migrate",
    "flask-sqlalchemy",
    "flask-jwt-extended",
    "marshmallow",
    "psycopg2-binary"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = [
    "migrations/*",
    "*/__init__.py",
    "api/config.dev.py",
    "api/faker/*",
    "api/tests/fixtures.py",
    "api/tests/mockfilesystemadapter.py",
    "api/tests/mockmodelrepository.py",
    "api/tests/mockpasswordencoderstrategy.py",
]